<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ComparePcsActivity">

    <include
        android:id="@+id/include"
        layout="@layout/actiobar_toolbar"></include>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="368dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/surface" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/mac" />
    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tableLayout"
        android:layout_width="324dp"
        android:layout_height="388dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="8dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:padding="3dip" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="Surface Laptop" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="MacBook" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/pantalla" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/sizePc" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/sizeMac" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="CPU" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/cpuPc" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/cpuMac" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="RAM" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/ramPC" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/ramMac" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/bateria" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/bateryPc" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/bateryMac" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/puertos" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/puertosPC" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/puertosMac" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/peso" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/pesoPc" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/pesoMac" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/almacenamiento" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/almacenamientoPc" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/almacenamientoMac" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="119dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/precio" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:padding="3dip"
                android:text="@string/precioPc" />

            <TextView
                android:layout_width="103dp"
                android:layout_height="match_parent"
                android:padding="3dip"

                android:text="@string/precioMac" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>