<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prictureCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    cardview:cardCornerRadius="0dp">
    <include layout="@layout/actiobar_toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="249dp"
            android:background="@drawable/mac"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionname_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:id="@+id/userNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="MacBook"
                android:paddingLeft="100dp"
                android:paddingRight="@dimen/activity_vertical_margin"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                />
            <TextView
                android:id="@+id/titleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/future"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="20dp"
                />
            <TextView
                android:id="@+id/textContentImageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/loremMac"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>